[gd_scene format=3 uid="uid://28rutckhiqb"]

[ext_resource type="Script" uid="uid://gykwd0gl5vir" path="res://main_scene.gd" id="1_2c62f"]
[ext_resource type="PackedScene" uid="uid://duonpkmws3hsq" path="res://scenes/hero.tscn" id="2_2c62f"]
[ext_resource type="PackedScene" uid="uid://deqppfnd8nte6" path="res://scenes/opening_screen.tscn" id="2_5smuj"]
[ext_resource type="PackedScene" uid="uid://dgw8e5r6tdw3s" path="res://scenes/murs_musee.tscn" id="4_8mm7a"]
[ext_resource type="PackedScene" uid="uid://c0mcjjbfvy02m" path="res://scenes/gardien.tscn" id="4_d5x1h"]
[ext_resource type="PackedScene" uid="uid://cjikilhv1i254" path="res://scenes/film_grain.tscn" id="5_8mm7a"]
[ext_resource type="AudioStream" uid="uid://bacxh76j3tpwo" path="res://assets/sons/gardien.wav" id="5_ghshe"]
[ext_resource type="AudioStream" uid="uid://dhj175wwo7le0" path="res://assets/sons/gardien_2.wav" id="6_fv2he"]
[ext_resource type="AudioStream" uid="uid://bbpkx8rdcuotc" path="res://assets/sons/ambiance_musee.wav" id="6_hq1ik"]
[ext_resource type="AudioStream" uid="uid://dwyga6f14wft6" path="res://assets/sons/gardien_3.wav" id="7_5smuj"]
[ext_resource type="AudioStream" uid="uid://dyvxnu1ctb6k3" path="res://assets/sons/gardien_4.wav" id="8_y5ved"]
[ext_resource type="AudioStream" uid="uid://ba1h0rfms4jg4" path="res://assets/sons/schiller.wav" id="9_kv3aw"]
[ext_resource type="AudioStream" uid="uid://bcw584m8kn4mw" path="res://assets/sons/game_over.wav" id="11_fv2he"]
[ext_resource type="PackedScene" uid="uid://dvn73alpy73bu" path="res://scenes/masques.tscn" id="12_5smuj"]
[ext_resource type="PackedScene" uid="uid://043nuu864otw" path="res://assets/models/skibidi_toilet_template/scene.gltf" id="14_y5ved"]
[ext_resource type="PackedScene" uid="uid://dbsy7swcjmni8" path="res://scenes/statues.tscn" id="16_y5ved"]
[ext_resource type="Material" uid="uid://dqdcv6q7pln4g" path="res://shader/materials/bayer_level3_16x16.tres" id="18_7th4q"]
[ext_resource type="Texture2D" uid="uid://ukq3jyf4gs1r" path="res://assets/tableaux/tableau7.png" id="20_kv3aw"]
[ext_resource type="Texture2D" uid="uid://2xv0rih0wxdl" path="res://assets/tableaux/tableau5.png" id="21_kv3aw"]
[ext_resource type="Texture2D" uid="uid://bu8mkidkb258e" path="res://assets/tableaux/tableau 8.png" id="21_o7u2a"]
[ext_resource type="Texture2D" uid="uid://brdhao8kvynri" path="res://assets/tableaux/tableau 9.png" id="22_ijoax"]
[ext_resource type="Texture2D" uid="uid://bcusr1tyvi405" path="res://assets/tableaux/tableau1.png" id="24_j8kkg"]
[ext_resource type="PackedScene" uid="uid://bcl107q571qjy" path="res://scenes/mask_counter.tscn" id="24_kv3aw"]
[ext_resource type="PackedScene" uid="uid://pe58kgpg1fk8" path="res://scenes/game_over_screen.tscn" id="25_y5ved"]
[ext_resource type="Texture2D" uid="uid://0q6ylafi4snv" path="res://assets/tableaux/tableau2.png" id="25_yh4yk"]
[ext_resource type="Texture2D" uid="uid://dl1b8sce4xpe3" path="res://assets/tableaux/tableau3.png" id="26_p8s74"]
[ext_resource type="PackedScene" uid="uid://5vs36dyd4ktl" path="res://scenes/statues/fadein_begin.tscn" id="27_ijoax"]
[ext_resource type="Texture2D" uid="uid://bwohkoa6lq2wg" path="res://assets/tableaux/tableau4.png" id="27_o4fqm"]
[ext_resource type="PackedScene" uid="uid://dbrwfvtble66q" path="res://scenes/game_win_screen.tscn" id="27_o7u2a"]

[sub_resource type="Environment" id="Environment_0f027"]
ambient_light_source = 1
ambient_light_color = Color(1, 1, 1, 1)
fog_enabled = true
fog_light_color = Color(0, 0, 0, 1)
volumetric_fog_density = 0.03

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0f027"]

[sub_resource type="PlaneMesh" id="PlaneMesh_2c62f"]
material = SubResource("StandardMaterial3D_0f027")
size = Vector2(105, 105)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_gyfs4"]

[sub_resource type="BoxShape3D" id="BoxShape3D_d5x1h"]
size = Vector3(105, 0.5, 105)

[sub_resource type="ViewportTexture" id="ViewportTexture_u0ygc"]
viewport_path = NodePath("SubViewportContainer_main/SubViewport_main")

[node name="Root" type="Node3D" unique_id=235951408]
script = ExtResource("1_2c62f")

[node name="SubViewportContainer_main" type="SubViewportContainer" parent="." unique_id=1415218808]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
mouse_target = true

[node name="SubViewport_main" type="SubViewport" parent="SubViewportContainer_main" unique_id=1934525258]
handle_input_locally = false
audio_listener_enable_2d = true
audio_listener_enable_3d = true
physics_object_picking = true
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Hero" parent="SubViewportContainer_main/SubViewport_main" unique_id=1095653713 instance=ExtResource("2_2c62f")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0125787, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer_main/SubViewport_main" unique_id=1035082531]
environment = SubResource("Environment_0f027")

[node name="Sol" type="MeshInstance3D" parent="SubViewportContainer_main/SubViewport_main" unique_id=1807146076]
transform = Transform3D(0.9999976, 0.00052596076, 0.0021258034, -0.0005245589, 0.99999964, -0.00065771746, -0.0021261498, 0.00065659697, 0.9999975, 0.026914597, -0.033221245, -0.7776146)
mesh = SubResource("PlaneMesh_2c62f")

[node name="StaticBody3D" type="StaticBody3D" parent="SubViewportContainer_main/SubViewport_main/Sol" unique_id=105783567]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
physics_material_override = SubResource("PhysicsMaterial_gyfs4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer_main/SubViewport_main/Sol/StaticBody3D" unique_id=176893440]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00036892295, 0)
shape = SubResource("BoxShape3D_d5x1h")

[node name="Plafond" type="MeshInstance3D" parent="SubViewportContainer_main/SubViewport_main" unique_id=590006969]
transform = Transform3D(1, 0, 0, 0, -0.99988127, 0.015410679, 0, -0.015410679, -0.99988127, 0, 59.968994, 0)
mesh = SubResource("PlaneMesh_2c62f")

[node name="murs_musee" parent="SubViewportContainer_main/SubViewport_main" unique_id=210877261 instance=ExtResource("4_8mm7a")]

[node name="gardiens" type="Node3D" parent="SubViewportContainer_main/SubViewport_main" unique_id=1548230521]

[node name="Gardien" parent="SubViewportContainer_main/SubViewport_main/gardiens" unique_id=2111767883 instance=ExtResource("4_d5x1h")]
transform = Transform3D(-0.9806625, 0, 0.19570644, 0, 1, 0, -0.19570644, 0, -0.9806625, 29.943434, 1.0226038, -8.193649)
voice = ExtResource("5_ghshe")

[node name="Gardien2" parent="SubViewportContainer_main/SubViewport_main/gardiens" unique_id=1004448656 instance=ExtResource("4_d5x1h")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30.560816, 1.002, 2.1965952)
voice = ExtResource("6_fv2he")

[node name="Gardien3" parent="SubViewportContainer_main/SubViewport_main/gardiens" unique_id=411251307 instance=ExtResource("4_d5x1h")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.0782013, 1.0020038, 31.38911)
voice = ExtResource("7_5smuj")

[node name="Gardien4" parent="SubViewportContainer_main/SubViewport_main/gardiens" unique_id=444538414 instance=ExtResource("4_d5x1h")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21.99302, 1.002, 31.723358)
voice = ExtResource("8_y5ved")

[node name="Gardien5" parent="SubViewportContainer_main/SubViewport_main/gardiens" unique_id=146755702 instance=ExtResource("4_d5x1h")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.575684, 1.002, -41.95965)
voice = ExtResource("9_kv3aw")

[node name="audio" type="Node" parent="SubViewportContainer_main/SubViewport_main" unique_id=579394576]

[node name="ambiance_musee" type="AudioStreamPlayer" parent="SubViewportContainer_main/SubViewport_main/audio" unique_id=1101721010]
stream = ExtResource("6_hq1ik")
volume_db = -25.0
autoplay = true

[node name="AudioGameOver" type="AudioStreamPlayer" parent="SubViewportContainer_main/SubViewport_main/audio" unique_id=1781079226]
stream = ExtResource("11_fv2he")

[node name="masques" parent="SubViewportContainer_main/SubViewport_main" unique_id=1219746355 instance=ExtResource("12_5smuj")]

[node name="statues" parent="SubViewportContainer_main/SubViewport_main" unique_id=18525707 instance=ExtResource("16_y5ved")]

[node name="toilets" type="Node3D" parent="SubViewportContainer_main/SubViewport_main" unique_id=76112009]

[node name="Toilet" parent="SubViewportContainer_main/SubViewport_main/toilets" unique_id=1510027598 instance=ExtResource("14_y5ved")]
transform = Transform3D(0.34563965, 0, 0.20132865, 0, 0.4, 0, -0.20132865, 0, 0.34563965, 24.87103, 9.536743e-07, 36.78984)

[node name="Toilet4" parent="SubViewportContainer_main/SubViewport_main/toilets" unique_id=395695973 instance=ExtResource("14_y5ved")]
transform = Transform3D(0.33361214, 0, 0.22068748, 0, 0.4, 0, -0.22068748, 0, 0.33361214, 26.787848, 9.536743e-07, 35.452065)

[node name="Toilet2" parent="SubViewportContainer_main/SubViewport_main/toilets" unique_id=2036810876 instance=ExtResource("14_y5ved")]
transform = Transform3D(0.36003935, 0, 0.17427473, 0, 0.4, 0, -0.17427473, 0, 0.36003935, 22.597422, 4.7683716e-07, 38.111923)

[node name="Toilet3" parent="SubViewportContainer_main/SubViewport_main/toilets" unique_id=1126492676 instance=ExtResource("14_y5ved")]
transform = Transform3D(0.17217599, 0.31225404, 0.18125348, -0.27674887, 0.24310395, -0.15591815, -0.2318738, -0.058290824, 0.3206815, 19.874731, 0.17118931, 39.47413)

[node name="tableaux" type="Node3D" parent="SubViewportContainer_main/SubViewport_main" unique_id=555675809]

[node name="Sprite3D" type="Sprite3D" parent="SubViewportContainer_main/SubViewport_main/tableaux" unique_id=623293435]
transform = Transform3D(0.8742894, 0, 0.48540485, 0, 1, 0, -0.4854048, 0, 0.8742895, -25.72287, 4.0012693, 12.925697)
transparent = false
shaded = true
texture_filter = 0
texture = ExtResource("24_j8kkg")

[node name="Sprite3D2" type="Sprite3D" parent="SubViewportContainer_main/SubViewport_main/tableaux" unique_id=1723308981]
transform = Transform3D(0.9521614, 0, -0.3055956, 0, 1, 0, 0.3055956, 0, 0.9521614, -41.214504, 3.441978, -14.794788)
transparent = false
shaded = true
texture_filter = 0
texture = ExtResource("25_yh4yk")

[node name="Sprite3D3" type="Sprite3D" parent="SubViewportContainer_main/SubViewport_main/tableaux" unique_id=1630904822]
transform = Transform3D(0.86504626, 0, -0.50169206, 0, 1, 0, 0.501692, 0, 0.86504644, 25.855331, 3.157013, 12.992563)
transparent = false
shaded = true
texture_filter = 0
texture = ExtResource("26_p8s74")

[node name="Sprite3D4" type="Sprite3D" parent="SubViewportContainer_main/SubViewport_main/tableaux" unique_id=522569962]
transform = Transform3D(1.748579, 0, 0.9708097, 0, 2, 0, -0.9708097, 0, 1.748579, 25.651129, 4.3091598, -14.362927)
transparent = false
shaded = true
texture_filter = 0
texture = ExtResource("27_o4fqm")

[node name="Sprite3D5" type="Sprite3D" parent="SubViewportContainer_main/SubViewport_main/tableaux" unique_id=1338460605]
transform = Transform3D(-0.0054664984, 0, 1.1999874, 0, 1.2, 0, -1.1999874, 0, -0.0054664984, 0.2038151, 3.1875162, -30.089771)
transparent = false
shaded = true
texture_filter = 0
texture = ExtResource("21_kv3aw")

[node name="Sprite3D6" type="Sprite3D" parent="SubViewportContainer_main/SubViewport_main/tableaux" unique_id=1083538523]
transform = Transform3D(-0.8126839, 0, -0.58270466, 0, 1, 0, 0.5827046, 0, -0.812684, 31.087883, 3.4011755, 40.0094)
transparent = false
shaded = true
texture_filter = 0
texture = ExtResource("20_kv3aw")

[node name="Sprite3D7" type="Sprite3D" parent="SubViewportContainer_main/SubViewport_main/tableaux" unique_id=336065044]
transform = Transform3D(-0.73897284, 0, -0.67373514, 0, 1, 0, 0.6737351, 0, -0.7389729, -24.797693, 3.4449155, 22.869066)
transparent = false
shaded = true
texture_filter = 0
texture = ExtResource("21_o7u2a")

[node name="Sprite3D8" type="Sprite3D" parent="SubViewportContainer_main/SubViewport_main/tableaux" unique_id=1125321854]
transform = Transform3D(0.98538697, 0, -0.17032987, 0, 1, 0, 0.17032984, 0, 0.9853871, -3.582208, 3.0145693, 20.661661)
transparent = false
shaded = true
texture_filter = 0
texture = ExtResource("22_ijoax")

[node name="Film_grain" parent="SubViewportContainer_main/SubViewport_main" unique_id=2036027335 instance=ExtResource("5_8mm7a")]

[node name="MaskCounter" parent="SubViewportContainer_main/SubViewport_main" unique_id=1938424269 instance=ExtResource("24_kv3aw")]

[node name="OpeningScreen" parent="SubViewportContainer_main/SubViewport_main" unique_id=1692176221 instance=ExtResource("2_5smuj")]

[node name="GameOverScreen" parent="SubViewportContainer_main/SubViewport_main" unique_id=844084928 instance=ExtResource("25_y5ved")]

[node name="GameWinScreen" parent="SubViewportContainer_main/SubViewport_main" unique_id=722615610 instance=ExtResource("27_o7u2a")]

[node name="fadein_begin" parent="SubViewportContainer_main/SubViewport_main" unique_id=1396533236 instance=ExtResource("27_ijoax")]

[node name="SubViewportContainer_dither" type="SubViewportContainer" parent="." unique_id=1992925100]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
stretch = true

[node name="SubViewport_dither" type="SubViewport" parent="SubViewportContainer_dither" unique_id=1198426561]
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="TextureRect_2D" type="TextureRect" parent="SubViewportContainer_dither/SubViewport_dither" unique_id=782089668]
material = ExtResource("18_7th4q")
offset_right = 1920.0
offset_bottom = 1080.0
texture = SubResource("ViewportTexture_u0ygc")

[editable path="SubViewportContainer_main/SubViewport_main/GameOverScreen"]
